Fix search field positioning on mobile

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -180,6 +180,9 @@ header.site_head
       border: none
       &:focus
         background: #fff
+    +mobile
+      top: auto
+      bottom: 100%
 
 .admin_panel
   position: fixed
